# handbook.vantage.sh

./: 404.html  CNAME  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
aws/concepts/autoscaling/: index.html
aws/concepts/bill/: index.html
aws/concepts/budgets/: index.html
aws/concepts/credits/: index.html
aws/concepts/io-operations/: index.html
aws/concepts/regions/: index.html
aws/concepts/reserved-instances/: index.html
aws/concepts/rightsizing/: index.html
aws/concepts/savings-plans/: index.html
aws/concepts/tags/: index.html
aws/reference/: get_products.py  transform_gpus.py
aws/reference/aws-gpu-instances/: index.html
aws/reference/aws-product-codes/: index.html
aws/reference/aws-regions/: index.html
aws/services/batch-pricing/: index.html
aws/services/config-pricing/: index.html
datadog/committed-use-discounts/: index.html
docs/: index.md  leaderboard.md
docs/datadog/: committed-use-discounts.md
docs/kubernetes/: kubernetes-rightsizing.md
docs/snowflake/: adjustments-for-included-cloud-services.md
docs/stylesheets/: extra.css
docs/tools/: cost-reports.md  instance-pricing.md  instances.md
kubernetes/kubernetes-rightsizing/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
snowflake/adjustments-for-included-cloud-services/: index.html
tools/cost-explorer/: index.html
tools/cost-reports/: index.html
tools/instance-pricing/: index.html
tools/instances/: index.html
(+87 files in other folders)
