[tool.poetry]
name = "handbook-vantage-sh"
version = "1.0.0"
description = "This is the repository backing the site hosted at https://handbook.vantage.sh/"
authors = ["Vantage Engineering <support@vantage.sh>"]
license = "Attribution-NonCommercial-ShareAlike 4.0 International"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
